0.7.5
- Determine configuration file path with appdirs
0.7.4
- Add de-/select all buttons to Batch | Statistical analysis
- Add de-/select all buttons to export all events data (#148)
- Bugfixes:
  - Young's modulus not computed in batch analysis (#149)
  - dclab 0.2.3.dev4: Loading old session files with polygon filters (#152)
  - Sessions saved with Windows cannot be opened on Linux (#153)
  - Regression: save button did not work
0.7.3
- Add interface to calculate elastic modulus
- Bugfixes:
  - Regression analysis not working for some Windows regional settings (#142)
  - Filters not applied when loading a session
  - Regression: Not possible to manually set plotting range
  - Excluded events were plotted despite downsampling limit
  - Support columns containing NaN and infinite values
- dclab 0.2.3:
  - Add filtering option "remove invalid events" to remove nan/inf
  - Add methods to compute elastic modulus
- fcswrite 0.1.3dev6
  - Range for fluorescence data is always 2**15
  - Range for Deformation/Circularity is 100 or 1.0
0.7.2
- Set histogram-based kernel density estimator as default (#133)
- Regression analysis:
  - Added generalized linear mixed effects model (#126)
  - Remember treatment and repetition for each measurement (#134)
- Bugfixes:
  - Same default location for find/add measurements dialogs (#139)
  - Opening saved sessions with more than nine data sets failed (#141)
0.7.1
- Improved speed by optimization of GUI functions 
- Hash checks: Replace exception with a user-friendly warning (#128)
- Change: Renamed config key "kde multivariate" to "kde accuracy"
- Bugfixes:
  - Contour plot displays unused contour accuracy parameters
  - Persistent busy cursor when trace or video data is missing
  - Directory selections not always remembered correctly
- dclab:
  - Add histogram-based kernel density estimator
  - Refactoring to improve code quality
0.7.0
- Allow to rename polygon filters (#119)
- dclab:
  - Traces are loaded lazily (on demand)